--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+<style>
+h1{
+    background-color:red;
+    color:springgreen;
+    text-align: center;
+}
+h2{
+    background-color: brown;
+    color:blue
+}
+</style>
+
+
+
+
 </head>
-<body>
-    <p>Helloo</p>
-    <button>Hello</button>
-</body>
+<body>  
+    <h1> this is my first job
+    </h1>
+<h2> iwant to programer   </h2>
+</body>    
+
 </html>
